--- a/Student_BackEnd/src/main/resources/application.properties
+++ b/Student_BackEnd/src/main/resources/application.properties
@@ -8,3 +8,12 @@ spring.h2.console.enabled=true
 # Custom H2 Console URL
 spring.h2.console.path=/h2
 server.port:8081
+
+spring.security.user.name=admin
+spring.security.user.password=password
+
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.batch.job.enabled=false
+
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
